# webscraping-ai-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  python.yml  release.yml
.openapi-generator/: FILES
docs/: AIApi.md  Account.md  AccountApi.md  Error.md  HtmlApi.md  PageError.md  ScrappedPage.md  SelectedHTMLApi.md  TextApi.md
src/webscraping_ai/: __init__.py  _async_client.py  _errors.py  _query.py  _transport.py  client.py
test/: test_account.py  test_account_api.py  test_ai_api.py  test_error.py  test_html_api.py  test_page_error.py  test_scrapped_page.py  test_selected_html_api.py  test_text_api.py
tests/: test_async_client.py  test_client.py  test_errors.py  test_query.py
webscraping_ai/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
webscraping_ai/api/: __init__.py  account_api.py  ai_api.py  html_api.py  selected_html_api.py  text_api.py
webscraping_ai/models/: __init__.py  account.py  error.py  page_error.py  scrapped_page.py
