[tool.poetry]
name = "webscraping_ai"
version = "3.1.3"
description = "WebScraping.AI"
authors = ["WebScraping.AI Support <support@webscraping.ai>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/webscraping-ai/webscraping-ai-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "WebScraping.AI"]
include = ["webscraping_ai/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
