[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webscraping_ai"
dynamic = ["version"]
description = "Official Python client for the WebScraping.AI API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "WebScraping.AI Support", email = "support@webscraping.ai" }]
keywords = ["webscraping", "scraping", "api", "llm", "crawler"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://webscraping.ai"
Documentation = "https://webscraping.ai/docs"
Source = "https://github.com/webscraping-ai/webscraping-ai-python"
Changelog = "https://github.com/webscraping-ai/webscraping-ai-python/blob/master/CHANGELOG.md"
Issues = "https://github.com/webscraping-ai/webscraping-ai-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.version]
path = "src/webscraping_ai/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/webscraping_ai"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pyflakes/pycodestyle
  "I",             # isort
  "UP",            # pyupgrade
  "B",             # bugbear
  "C4",            # comprehensions
  "SIM",           # simplify
  "RUF",           # ruff-specific
]
ignore = [
  "UP006", "UP007", "UP035",  # keep typing.List/Dict/Optional for 3.9 compat without `from __future__`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
# 3.10 is the lowest version recent mypy supports as a target; runtime support
# is still 3.9+ (ruff's target-version=py39 guards against 3.10-only syntax).
python_version = "3.10"
strict = true
files = ["src/webscraping_ai"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = false
